# xml-verify

./: CHANGELOG.md  LICENSE  README.md  configure  configure.ac  xml-verify.buildinfo.in  xml-verify.cabal
cbits/: xml-verify.c  xml-verify.h
src/Crypto/PubKey/: Xml.hs
src/Crypto/PubKey/Xml/: Arrows.hs  Errors.hs
